Fixed text-align and overflow on table.

--- a/static/index.css
+++ b/static/index.css
@@ -63,13 +63,14 @@ article header h1{
     background: #EEE;
     padding: 0;
     box-sizing: border-box;
-    text-align: justify;
+    text-align: left;
     border: 1px solid #0088EE;
     border-top: none;
     border-bottom: none;
     font-size: 12pt;
     line-height: 120%;
     position: relative;
+    overflow-x: hidden;
 }
 
 table{
